; ModuleID = '/home/carl/AnghaBench/linux/drivers/pwm/extr_pwm-renesas-tpu.c_tpu_pwm_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pwm/extr_pwm-renesas-tpu.c_tpu_pwm_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pwm_chip = type { i32 }
%struct.pwm_device = type { i32 }
%struct.tpu_pwm_device = type { i32 }

@TPU_PIN_INACTIVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pwm_chip*, %struct.pwm_device*)* @tpu_pwm_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tpu_pwm_disable(%struct.pwm_chip* %0, %struct.pwm_device* %1) #0 {
  %3 = alloca %struct.pwm_chip*, align 8
  %4 = alloca %struct.pwm_device*, align 8
  %5 = alloca %struct.tpu_pwm_device*, align 8
  store %struct.pwm_chip* %0, %struct.pwm_chip** %3, align 8
  store %struct.pwm_device* %1, %struct.pwm_device** %4, align 8
  %6 = load %struct.pwm_device*, %struct.pwm_device** %4, align 8
  %7 = call %struct.tpu_pwm_device* @pwm_get_chip_data(%struct.pwm_device* %6)
  store %struct.tpu_pwm_device* %7, %struct.tpu_pwm_device** %5, align 8
  %8 = load %struct.tpu_pwm_device*, %struct.tpu_pwm_device** %5, align 8
  %9 = call i32 @tpu_pwm_timer_start(%struct.tpu_pwm_device* %8)
  %10 = load %struct.tpu_pwm_device*, %struct.tpu_pwm_device** %5, align 8
  %11 = load i32, i32* @TPU_PIN_INACTIVE, align 4
  %12 = call i32 @tpu_pwm_set_pin(%struct.tpu_pwm_device* %10, i32 %11)
  %13 = load %struct.tpu_pwm_device*, %struct.tpu_pwm_device** %5, align 8
  %14 = call i32 @tpu_pwm_timer_stop(%struct.tpu_pwm_device* %13)
  ret void
}

declare dso_local %struct.tpu_pwm_device* @pwm_get_chip_data(%struct.pwm_device*) #1

declare dso_local i32 @tpu_pwm_timer_start(%struct.tpu_pwm_device*) #1

declare dso_local i32 @tpu_pwm_set_pin(%struct.tpu_pwm_device*, i32) #1

declare dso_local i32 @tpu_pwm_timer_stop(%struct.tpu_pwm_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
